--- a/http-server/resources/ru/yandex/testopithecus/templates/test.html
+++ b/http-server/resources/ru/yandex/testopithecus/templates/test.html
@@ -2,6 +2,7 @@
     <title>Graph visualization</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css">
     <style type="text/css">
                 #content {
